# aegis

./: .gitignore  README.md  build.ps1  main.py  pyproject.toml
.github/workflows/: release.yml
examples/: disabled_jwt_verification.json  sql_injection_fstring.json  wildcard_cors_policy.json
src/: main.py
src/aegis/: __init__.py  cli.py  guardrails.py  llm_client.py  schema.py  storage.py  sync.py
src/aegis_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_guardrails.py
